syntax = "proto3";

package front_api;

service Api {
    rpc RunnerList(Criteria) returns (Runners);
    rpc RunnerStat(Criteria) returns (RunnerStats);
    rpc RunnerGet(Runner) returns (Runner);
    rpc RunnerKill(Runner) returns (Runner);

    rpc RunList(Criteria) returns (Runs);
    rpc RunStat(Criteria) returns (RunStats);
    rpc RunGet(Run) returns (Run);
    rpc RunStart(Run) returns (Run);
    rpc RunCancel(Run) returns (Run);

    rpc BatchList(Criteria) returns (Batchs);
    rpc BatchListActive(Criteria) returns (Batchs);
    rpc BatchGet(Batch) returns (Batch);
    rpc BatchAdd(Batch) returns (Batch);
    rpc BatchStart(BatchCreation) returns (Runs);
    rpc BatchStat(Criteria) returns (BatchStats);

    rpc NamespaceList(Criteria) returns (Namespaces);
    rpc NamespaceGet(Namespace) returns (Namespace);
    rpc NamespaceCreate(Namespace) returns (Namespace);
    rpc NamespaceAddRepo(Namespace) returns (Namespace);
    rpc ReposDesactivate(Repos) returns (Repos);
}

message Runner {
    int64  id = 1;
    string name = 2;
    string status = 3;
    string date = 4; //FIXME, we could use timestamp here
    string ip = 5;
}

message Runners {
    repeated Runner runners = 1;
}

message RunnerStats {
    int64 all = 1;
    int64 waiting = 2;
    int64 dead = 3;
}

message Run {
    int64  id = 1;
    string status = 2;
    int64  runnerId = 3;
    string runnerName = 4;
    int64  repoId = 5;
    string repoName = 6;
    int64  batch = 7;
    string namespace = 8;
    string logs = 9;
    string creation = 10;
    string lastUpdate = 11;
    string startDate = 12;
    string duration = 13;
    uint32 priority = 14;
}

message Runs {
    repeated Run runs = 1;
}

message RunStats {
    int64 all = 1;
    int64 waiting = 2;
    int64 running = 3;
    int64 canceled = 4;
    int64 finished = 5;
    int64 failed = 6;
    int64 timeout = 7;

}

message BatchCreation {
    Batch  batch = 1;
    uint32 priority = 2;
}

message Batch {
    int64 id = 1;
    string namespace = 2;
    string initScript = 3;
    int64 updateTime = 4;
    int64 timeout = 5;
    string creation = 6;
}

message Batchs {
    repeated Batch batchs = 1;
}

message BatchStats {
    int64 all = 1;
    int64 active = 2;
}

message Namespace {
    string name = 1;
    repeated Repo repos = 2;
}

message Namespaces {
    repeated Namespace namespaces = 1;
}

message Repo {
    int64  id = 1;
    string namespace = 2;
    string repo = 3;
    string ssh = 4;
    bool   active = 5;
}

message Repos {
    repeated Repo repos = 1;
}

message Criteria {
    map<string, string> filters = 1;
    int64 limit = 2;
    int64 offset = 3;
}
